[package]
name = "tokio-hyper"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]

[dependencies]
futures = { git = "https://github.com/alexcrichton/futures-rs" }
hyper = { git = "https://github.com/hyperium/hyper" }
log = "0.3.6"
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }

[dev-dependencies]
env_logger = "0.3.0"
