[package]
name = "tokio-hyper"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]

[dependencies]
futures = "0.1"
hyper = { git = "https://github.com/hyperium/hyper", default-features = false, features = ["security-framework"] }
log = "0.3.6"
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }

[dev-dependencies]
env_logger = "0.3.0"
